# c-lessons

./: CMakeLists.txt  args.c  arithmetic.c  array.c  assign.c  breakcontinue.c  cast.c  comparison.c  conditional.c  constant.c  consttype.c  debug.c  define.c  dowhile.c  enum.c  first.c  forloop.c  global_1.c  global_2.c  hello.c  ifelse.c  jump.c  logic.c  matrix.c  precedence.c  recur.c  register.c  setvars.c  size.c  sizeof.c  square.c  switch.c  vars.c  xor.c
