# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled C)

set(CMAKE_C_STANDARD 99)

#add_executable(untitled main.c)
#add_executable(untitled hello.c)
#add_executable(untitled vars.c)
#add_executable(untitled setvars.c)
#add_executable(untitled sizeof.c)
#add_executable(untitled global_1.c global_2.c)
#add_executable(untitled register.c)
#add_executable(untitled cast.c)
#add_executable(untitled array.c)
#add_executable(untitled matrix.c)
#add_executable(untitled constant.c)
#add_executable(untitled enum.c)
#add_executable(untitled consttype.c)
#add_executable(untitled define.c)
#add_executable(untitled debug.c)
#add_executable(untitled arithmetic.c)
#add_executable(untitled comparison.c)
#add_executable(untitled logic.c)
#add_executable(untitled conditional.c)
#add_executable(untitled size.c)
#add_executable(untitled xor.c)
#add_executable(untitled bitflag.c)
add_executable(untitled precedence.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)
#add_executable(untitled xor.c)